Removes need for nav div, and fixes layout issues

--- a/javascript/restaurant/src/components/StickyMenu/StickyMenu.local.css
+++ b/javascript/restaurant/src/components/StickyMenu/StickyMenu.local.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   height: 70px;
-  z-index: 10;
 }
 
 .nav-content {
@@ -23,6 +22,7 @@
 }
 
 .nav-content ul {
+  flex: 1;
   margin: 0;
   padding: 0;
   list-style: none;
